# mac-config

./: .gitconfig  .viminfo  README.md
.config-backup/: .bash_profile  .bashrc  .gitconfig  .zshrc
.config/cmus/: autosave  cache  command-history  lib.pl
.config/cmus/playlists/: beats  default  instrumental  minimal-classical  orchestral  piano  samples  songs
.config/fish/: config.fish  fish_plugins  fish_variables
.config/fish/completions/: poetry.fish
.config/fish/functions/: _activate_venv_on_start.fish  add_to_hosts.fish  add_var_to_keychain.fish  backup.fish  create_playlist.fish  df.fish  dotfiles.fish  fish_prompt.fish  funcsave.fish  gpt.fish  last-function-name.fish  load_var_from_keychain.fish  mkcd.fish  move-last-download.fish  muai.fish  organize_files.fish  vim.fish  wifi_network_name.fish  wifi_password.fish  wifi_reset.fish
.config/git/: gitk
.config/iterm2/: AppSupport  com.googlecode.iterm2.plist
.config/karabiner/: karabiner.json
.config/karabiner/automatic_backups/: karabiner_20220730.json  karabiner_20220925.json  karabiner_20220926.json  karabiner_20220927.json  karabiner_20230305.json  karabiner_20230711.json
.config/tmux/: tmux.conf
.setup_scripts/: Brewfile  brew.sh  dotfiles.fish  dotfiles_selection.py  environment.fish  manage-ect-hosts.sh  setup.sh
music-ai/: muai.py  muai_embeddings.index  muai_filenames.txt  pyproject.toml
